[package]
name = "bittorrent-rust"
version = "0.1.0"
authors = ["Rahul Pamnani"]
edition = "2024"

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.0.32", features = ["derive"] }
hex = "0.4.3"
rand = "0.10.0"
reqwest = { version = "0.11.18", features = ["json", "blocking"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_bencode = "0.2.3"
serde_bytes = "0.11.12"
serde_json = "1.0.105"
sha1 = "0.10.1"
tokio = { version = "1.23.0", features = ["full"] }
url = "2.5.8"
